--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Customized Rules
+private/
+.idea
+.vscode
+**/package-lock.json
 
 # Created by https://www.gitignore.io/api/node,bazel,macos,intellij
 
